--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               Net-Facebook-API
-version:            0.06
+version:            0.07
 abstract:           Perl extension for Facebook OAuth2 API
 author:
-    - root <root@localdomain>
+    - Asaf Klibansky <asaf@sortprice.com>
 license:            unknown
 distribution_type:  module
 configure_requires:
